plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	// Loom adds the essential maven repositories automatically.
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"conduit" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}
}

// ---------------------------------------------------------------------------
// Dependencies
// ---------------------------------------------------------------------------

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
}

// ---------------------------------------------------------------------------
// Compilation
// ---------------------------------------------------------------------------

tasks.withType(JavaCompile).configureEach {
	options.release = 25
	options.encoding = 'UTF-8'
	options.compilerArgs += ['-Xlint:all', '-Xlint:-processing']
}

java {
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

// ---------------------------------------------------------------------------
// Resource processing  (inject mod version into fabric.mod.json)
// ---------------------------------------------------------------------------

processResources {
	inputs.property 'version', project.version

	filesMatching('fabric.mod.json') {
		expand 'version': inputs.properties.version
	}
}

// ---------------------------------------------------------------------------
// JAR packaging
// ---------------------------------------------------------------------------

jar {
	from('LICENSE') {
		rename { "${it}_${project.archives_base_name}" }
	}

	manifest {
		attributes(
			'Implementation-Title':   project.archives_base_name,
			'Implementation-Version': project.version,
			'Built-By':               System.getProperty('user.name', 'ci'),
			'Build-Timestamp':        new java.text.SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ssZ").format(new Date()),
		)
	}
}

// ---------------------------------------------------------------------------
// Publishing
// ---------------------------------------------------------------------------

publishing {
	publications {
		create('mavenJava', MavenPublication) {
			from components.java

			pom {
				name = 'Conduit'
				description = 'One-click server-hosting panel for Minecraft single-player worlds.'
				url = 'https://github.com/GoatTech-42/Conduit'
				licenses {
					license {
						name = 'MIT License'
						url = 'https://opensource.org/licenses/MIT'
					}
				}
			}
		}
	}

	repositories {
		// Add publish targets here.
	}
}
